# rust-backend-debitos-creditos-2025

./: .gitignore  README.md  _linux_run-test-launcher.sh  _linux_run-test-main-logic.sh  _linux_run-test-stats-logger.sh  _win_run-test-launcher.bat  _win_run-test-main-logic.ps1  _win_run-test-stats-logger.ps1  docker-compose.yml
app/: Cargo.toml  Dockerfile  main.rs
gatling/: README.md  pom.xml
gatling/.gatling/: example.package.conf
gatling/src/test/java/example/: BasicSimulation.java
gatling/src/test/resources/: gatling.conf
gatling/src/test/scala/: RinhaBackendCrebitosSimulation.scala
nginx/: nginx.conf
pgbouncer/: pgbouncer.ini
sql/: init.sql
