[package]
name = "rust_api"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web framework
axum = "0.8.6"

# Serde para (de)serialização
serde = { version = "1.0.228", features = ["derive"] }

tower-http = { version = "0.5", features = ["limit"] }

# SQLx (Postgres) assíncrono, com macros e suporte JSON
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "macros", "json"] }

# Tokio runtime
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "net", "time", "sync"] }

# Manejo simples de erros
anyhow = "1.0.100"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
debug = false
strip = true
panic = "abort"